# lpld-io

./: .editorconfig  .gitignore  .prettierignore  2q  Dockerfile  README.md  docker-compose.ci.yaml  docker-compose.ci.yml  docker-compose.yaml  docker-compose.yml  fly.toml  heroku.yml  litestream.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js
.divio/: config.json
.github/: dependabot.yml
.github/workflows/: cd.yaml  ci-sequential.yml  ci.yml
lpld/: asgi.py  settings.py  urls.py  wsgi.py
lpld/articles/: apps.py  factories.py  models.py
lpld/articles/migrations/: 0001_initial.py
lpld/blog/: apps.py  factories.py  models.py
lpld/blog/migrations/: 0001_initial.py  0002_add_heading_blocks.py  0003_alter_blogpage_body.py  0004_blogpage_introduction.py  0005_alter_blogpage_introduction.py  0006_rename_blogpage_blogpostpage.py
lpld/core/: apps.py  blocks.py  context_processors.py  models.py  settings.py  views.py
lpld/core/factories/: blocks.py  models.py
lpld/core/migrations/: 0001_initial.py  0002_project_tech_relation.py  0003_delete_technology.py  0004_add_navigation_settings_links.py  0004_add_primary_navigation_setting.py
lpld/home/: apps.py  factories.py  models.py  views.py
lpld/home/migrations/: 0001_initial.py  0002_homepage_introduction.py  0003_homepage_profile_image.py  0004_homepage_body.py  0005_homepage_subtitle_alter_homepage_body.py  0006_update_paragraph_block.py
lpld/home/tests/: test_views.py
lpld/images/: apps.py  models.py
lpld/images/migrations/: 0001_initial.py  0002_alter_customimage_file_hash.py  0003_alter_customimage_file_alter_customrendition_file.py
lpld/index/: apps.py  factories.py  models.py
lpld/index/migrations/: 0001_initial.py  0002_indexpage_introduction.py
lpld/mediafiles/: apps.py  models.py
lpld/mediafiles/migrations/: 0001_initial.py
lpld/navigation/: factories.py  models.py  utils.py
lpld/navigation/migrations/: 0001_initial.py
lpld/projects/: factories.py  models.py
lpld/projects/migrations/: 0001_initial.py  0002_project_tech_relation.py  0003_alter_projectpage_image.py  0004_projectpage_video.py  0005_alter_projecttechnologyrelation_technology.py
lpld/static/src/: button-link.css  contact.css  footer.css  header.css  home.css  layout.css  main.js  project-element.css  project-page.css  style.css  tech-pill.css
lpld/technologies/: apps.py  models.py
lpld/technologies/migrations/: 0001_initial.py  0002_copy_data.py  0003_alter_technology_options.py
lpld/templates/: 404.html  base-page.html  base.html  components.yaml
lpld/templatetag_overrides/templatetags/: navigation.py  wagtailcore_tags.py  wagtailimage_tags.py
lpld/templatetags/: lpldutils.py  navigation.py  templex.py
lpld/templex/: __init__.py  templex.py
lpld/templex/templatetags/: templex.py
lpld/utils/: apps.py
scripts/: download_bucket.py  install-litestream.sh  release.sh  run.sh  transfer-data-to-sqlite.sh
tests/: test_settings.py
tests/test_articles/: test_factories.py  test_models.py
tests/test_blog/: test_factories.py  test_models.py
tests/test_core/: test_context_processors.py  test_models.py  test_settings.py  test_views.py
tests/test_home/: test_factories.py  test_models.py
tests/test_index/: test_factories.py  test_models.py
tests/test_navigation/: test_factories.py  test_models.py  test_utils.py
tests/test_projects/: test_factories.py  test_models.py
tests/test_templatetags/: test_lpldutils.py
(+135 files in other folders)
