[tool.poetry]
name = "lpld"
version = "0.1.0"
description = "My personal portfolio website"
authors = ["Tibor Leupold <tibor@lpld.io>"]
license = "MIT"

[tool.poetry.dependencies]
boto3 = "^1.20.41"
dj-database-url = "~0.5.0"
django = "~4.0"
django-basic-auth-ip-whitelist = "~0.5a"
django-storages = "^1.12.3"
django-widget-tweaks = "^1.4.8"
factory-boy = "^3.2.0"
gunicorn = "^20.1.0"
heroicons = {extras = ["django"], version = "^1.4.0"}
psycopg2 = "^2.9.1"
python = "^3.8"
sentry-sdk = "^1.4.3"
slippers = "^0.5.0"
wagtail = "~4.0"
wagtail-factories = "^2.0.1"
wagtailmedia = "^0.12.0"
wagtail-storages = "^1.0.0rc1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
django-debug-toolbar = "^3.2.1"
django-pattern-library = "~0.7.0"
django-stubs = "^1.9.0"
djhtml = "~1.4.10"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "~0.910"
pytest = "^7.2"
pytest-django = "^4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lpld.settings"
addopts = ["--disable-warnings"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
