[tool.poetry]
name = "lpld"
version = "0.1.0"
description = "My personal portfolio website"
authors = ["Tibor Leupold <tibor@lpld.io>"]
license = "MIT"

[tool.poetry.dependencies]
boto3 = "^1.28.40"
dj-database-url = "~2.1.0"
django = "~4.1"
django-basic-auth-ip-whitelist = "~0.5"
django-plausible-proxy = "~0.5"
django-storages = "^1.13.2"
django-widget-tweaks = "^1.4.8"
factory-boy = "^3.3.0"
gunicorn = "^21.2.0"
heroicons = {extras = ["django"], version = "^1.4.0"}
psycopg2 = "^2.9.6"
python = "^3.11"
sentry-sdk = "^1"
slippers = "^0.6.0"
wagtail = "~5.0"
wagtailmedia = "^0.14.4"
wagtail-markdown = "^0.11"
wagtail-factories = "^4.1.0"
wagtail-storages = "^1.0.0"
whitenoise = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^23"
django-debug-toolbar = "^4.2.0"
django-pattern-library = "~1.0.0"
django-stubs = "^1.9.0"
djhtml = "~3.0.6"
flake8 = "^5.0.4"
isort = "^5.12.0"
mypy = "~1.4"
pytest = "^7.2"
pytest-django = "^4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lpld.settings"
addopts = ["--disable-warnings"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
